# latexPDF-django

./: .gitignore  README.md  db.sqlite3  dockerfile  manage.py  pyproject.toml  requirements.txt
getZerojudge/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
outfile/: admin.py  apps.py  forms.py  models.py  serializers.py
outfile/migrations/: 0001_initial.py  0002_problem_title.py
outfile/views/: PathManager.py  create.py  generator.py  get_zerojudge.py  index.py  pdf.py  problem_crud.py
static/css/: base.css  create.css  index.css
static/js/: tabs.js
static/latex/: main.tex
static/sample/: main.tex
templates/: base.html  create.html  create_form.html  create_form_PDF.html  create_form_form.html  edit.html  index.html  test.html
